<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.salim.ta3limes.viewmodels.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteGrey"
        tools:context=".Activities.LoginActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@drawable/white_background_r6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:background="@drawable/white_background_r6"
                android:padding="8dp"
                android:text="@string/LoginTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/textColor" />

            <FrameLayout
                android:id="@+id/name_FrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_background_r6"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/InputsThemeDark"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:background="@drawable/white_background_r6">

                    <com.salim.ta3limes.utilities.CustomEditText
                        android:id="@+id/phone_EditText"
                        style="@style/InputsThemeDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="start"
                        android:inputType="number"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:paddingTop="8dp"
                        android:drawableEnd="@drawable/ic_phone"
                        android:drawablePadding="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textAlignment="viewStart"
                        android:hint="@string/MobileNumber"
                        android:textColorHint="@color/textColor"
                        android:textColor="@color/textColor"
                        android:text="@={viewmodel.phoneMutableLiveData}"/>

                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/password_FrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_background_r6"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/InputsThemeDark"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:background="@drawable/white_background_r6"
                    app:passwordToggleEnabled="true">

                    <com.salim.ta3limes.utilities.CustomEditText
                        android:id="@+id/password_EditText"
                        style="@style/InputsThemeDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="start"
                        android:inputType="textPassword"
                        android:textAlignment="viewStart"
                        android:paddingTop="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:hint="@string/Password"
                        android:textColorHint="@color/textColor"
                        android:textColor="@color/textColor"
                        android:text="@={viewmodel.passwordMutableLiveData}"/>

                </com.google.android.material.textfield.TextInputLayout>


<!--                <ImageView-->
<!--                    android:id="@+id/show_imageView"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:src="@drawable/ic_remove_eye"-->
<!--                    android:layout_gravity="start|center_vertical"-->
<!--                    android:layout_marginStart="5dp" />-->


<!--                <ImageView-->
<!--                    android:id="@+id/hide_imageView"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:src="@drawable/ic_visibility_off"-->
<!--                    android:layout_gravity="start|center_vertical"-->
<!--                    android:layout_marginStart="5dp"-->
<!--                    android:visibility="gone" />-->

            </FrameLayout>

            <TextView
                android:id="@+id/forgetPassword_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:gravity="left"
                android:background="@drawable/white_background_r6"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:text="@string/ForgetPassword"
                android:onClick="@{()-> viewmodel.onForgetPassword()}"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark" />


            <CheckBox
                android:id="@+id/check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/AcceptTerms"
                android:gravity="center_vertical|start"
                android:padding="8dp"
                android:textAlignment="viewStart"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"/>

            <Button
                android:id="@+id/login_btn"
                style="@style/AppButtonsTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:paddingStart="32dp"
                android:paddingEnd="16dp"
                android:background="@drawable/dark_grey_background"
                android:text="@string/Login"

                android:textColor="@color/white"
              />
            <TextView
                android:id="@+id/tvRegister"
                style="@style/AppButtonsTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:layout_marginBottom="32dp"
                android:paddingStart="32dp"
                android:paddingEnd="16dp"
                android:text="انشاء حساب"


              />

        </LinearLayout>

<!--        <ProgressBar-->
<!--            android:id="@+id/progressBar"-->
<!--            style="?android:attr/progressBarStyleSmall"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:visibility="@{viewmodel.progress}" />-->

        <com.tuyenmonkey.mkloader.MKLoader
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            app:mk_color="@color/colorPrimaryDark"
            app:mk_type="Whirlpool"/>

    </RelativeLayout>
</layout>