<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="resetpasswordview"
            type="com.salim.ta3limes.viewmodels.ResetPasswordViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.ResetPasswordActivity"
        android:background="@color/whiteGrey">

        <RelativeLayout
            android:id="@+id/rel_top"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/header"
                style="@style/InputsThemeDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/ChangePassword"
                android:textColor="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rel_top"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:background="@drawable/white_background_r6">

            <FrameLayout
                android:id="@+id/email_FrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                android:background="@drawable/white_background_r6">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/InputsThemeDark"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:background="@drawable/white_background_r6">

                    <com.salim.ta3limes.utilities.CustomEditText
                        android:id="@+id/email_EditText"
                        style="@style/InputsThemeDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="start"
                        android:drawableEnd="@drawable/ic_email"
                        android:drawablePadding="8dp"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textAlignment="viewStart"
                        android:hint="@string/InputEmail"
                        android:textColorHint="@color/textColor"
                        android:textColor="@color/textColor"
                        android:text="@={resetpasswordview.email}" />

                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/code_FrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_FrameLayout"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                android:background="@drawable/white_background_r6">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/InputsThemeDark"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:background="@drawable/white_background_r6">

                    <com.salim.ta3limes.utilities.CustomEditText
                        android:id="@+id/code_EditText"
                        style="@style/InputsThemeDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="start"
                        android:inputType="text"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textAlignment="viewStart"
                        android:hint="@string/InputCode"
                        android:textColorHint="@color/textColor"
                        android:textColor="@color/textColor"
                        android:text="@={resetpasswordview.code}" />

                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/newPassword_FrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/code_FrameLayout"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                android:background="@drawable/white_background_r6">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/InputsThemeDark"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:background="@drawable/white_background_r6"
                    app:passwordToggleEnabled="true">

                    <com.salim.ta3limes.utilities.CustomEditText
                        android:id="@+id/newPassword_EditText"
                        style="@style/InputsThemeDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="start"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textAlignment="viewStart"
                        android:hint="@string/InputNewPassword"
                        android:textColorHint="@color/textColor"
                        android:textColor="@color/textColor"
                        android:text="@={resetpasswordview.password}" />

                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/newPassword_config_FrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newPassword_FrameLayout"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                android:background="@drawable/white_background_r6">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/InputsThemeDark"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:background="@drawable/white_background_r6"
                    app:passwordToggleEnabled="true">

                    <com.salim.ta3limes.utilities.CustomEditText
                        android:id="@+id/newPassword_config_EditText"
                        style="@style/InputsThemeDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="start"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textAlignment="viewStart"
                        android:hint="@string/InputNewPasswordConfimation"
                        android:textColorHint="@color/textColor"
                        android:textColor="@color/textColor"
                        android:text="@={resetpasswordview.passwordConfirmation}" />

                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <Button
                android:id="@+id/send_btn"
                style="@style/AppButtonsTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newPassword_config_FrameLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/raleway"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:background="@drawable/red_background"
                android:text="@string/change"
                android:textColor="@color/white" />

        </RelativeLayout>

        <com.tuyenmonkey.mkloader.MKLoader
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            app:mk_color="@color/colorPrimaryDark"
            app:mk_type="Whirlpool" />


    </RelativeLayout>
</layout>